classDiagram
    class WeatherForecastApp {
        + main(String[] args)
    }

    class WeatherApiClient {
        + fetchWeatherData() String
    }

    class WeatherDataParser {
        + parseWeatherData(String jsonData) List<WeatherData>
    }

    class WeatherData {
        + getTime() String
        + getWeather() String
    }

    WeatherForecastApp --> WeatherApiClient : uses
    WeatherForecastApp --> WeatherDataParser : uses
    WeatherDataParser --> WeatherData : creates